fixes section root layout issue

--- a/ui/controls/section-root.reel/_section-root.css
+++ b/ui/controls/section-root.reel/_section-root.css
@@ -5,6 +5,7 @@
 
 .SectionRoot-entries {
     @apply --flex-column;
+    margin-top: -1rem !important;
 }
 
 .SectionRoot-overview {
@@ -12,7 +13,7 @@
     max-height: 15em;
     /* margin overrides for inspector spacing */
     margin: -1rem;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
 
     @apply --flex-column;
 
